# Stopro

./: CHANGELOG.md  README.md  args.py  commands.py  pyproject.toml  requirements.txt  setup.cfg  setup.py  stats.py  stopro  stopro.py  utils.py
src/: __main__.py  achievments.py  args.py  commands.py  lock.py  stats.py  stopro  utils.py  version.py
src/stopro/: __main__.py  achievments.py  args.py  commands.py  lock.py  stats.py  utils.py
