[metadata]
name = stopro
version = 0.0.1
author = Jan Černý
author_email = cerny@matfyz.cz
licence = GPLv3
description = A simple utility which will help you with self control and build work ethic.
long_description = Stopro is simple utility which will help you with self control and build work ethic. When you activate self control session all distracting pages will be blocked. List of distracting pages is fully configurable. This can help you focus and stop wasting time.
keywords = self control, work ethic, focus, distraction, productivity, mental health
url = https://github.com/yagarea/Stopro
requires_python = >=3.8
classifiers =
    Environment :: Console
    Licence :: OSI Approved :: GNU General Public Licence v3 (GPLv3)
    Programming Language :: Python :: 3

[options]
zip_safe = False
include_package_data = True
packages = find:
install_requires =
	commonmark
	pyaml
	Pygments
	python-dateutil
	PyYAML
	rich
	six


[options.entry_points]
console_scripts =
    executable-name = my_package.module:function


[options.packages.find]
exclude =
    README.md
	requirements.txt

